<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cervena">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/header1"
            android:text="@string/o_programe_title" />

        <TextView
            style="@style/paddingBot"
            android:text="@string/o_programe_1" />

        <TextView
            style="@style/basicText"
            android:text="@string/o_programe_2" />

        <TextView
            style="@style/list"
            android:text="@string/o_programe_3" />

        <TextView
            style="@style/paddingBot"
            android:text="@string/o_programe_4" />

        <TextView
            style="@style/basicText"
            android:text="@string/o_programe_5" />

        <TextView
            style="@style/basicText"
            android:text="@string/o_programe_6" />

        <TextView
            style="@style/list"
            android:text="@string/o_programe_7" />

        <TextView
            style="@style/paddingBot"
            android:text="@string/o_programe_8" />

        <TextView
            style="@style/lastElement"
            android:text="@string/o_programe_9" />
    </LinearLayout>
</ScrollView>