<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cervena">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/header1"
            android:text="@string/vaha_1" />

        <TextView
            style="@style/paddingBot"
            android:text="@string/vaha_2" />

        <TextView
            style="@style/paddingBot"
            android:text="@string/vaha_3" />

        <TextView
            style="@style/list"
            android:text="@string/vaha_4" />

        <TextView
            style="@style/list"
            android:text="@string/vaha_5" />

        <TextView
            style="@style/header1"
            android:text="@string/vaha_6" />

        <TextView
            style="@style/paddingBot"
            android:text="@string/vaha_7" />

        <TextView
            style="@style/paddingBot"
            android:text="@string/vaha_8" />

        <ImageView
            style="@style/image"
            android:src="@drawable/bmi" />

    </LinearLayout>
</ScrollView>