<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cervena">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/header1"
            android:text="@string/tlak_1" />

        <TextView
            style="@style/basicText"
            android:text="@string/tlak_2" />

        <ImageView
            style="@style/image"
            android:src="@drawable/tlak" />

        <TextView
            style="@style/paddingBot"
            android:text="@string/tlak_3" />

        <TextView
            style="@style/paddingBot"
            android:text="@string/tlak_4" />

        <TextView
            style="@style/paddingBot"
            android:text="@string/tlak_5" />

        <TextView
            style="@style/lastElement"
            android:text="@string/tlak_6" />
    </LinearLayout>
</ScrollView>